--- a/2_aarch64_vs_armhf/CMakeLists.txt
+++ b/2_aarch64_vs_armhf/CMakeLists.txt
@@ -13,7 +13,7 @@ endif()
 
 if(NEON)
     if(ARMHF) 
-        set(CMAKE_CXX_FLAGS "-save-temps -ftree-vectorize -O3 -DARM_NEON=1 -march=armv7-a+neon-vfpv4")
+        set(CMAKE_CXX_FLAGS "-save-temps -ftree-vectorize -O3 -DARM_NEON=1 -mfloat-abi=softfp -march=armv7-a+neon")
     else()
         set(CMAKE_CXX_FLAGS "-save-temps -ftree-vectorize -O3 -DARM_NEON=1 -march=armv8.1-a+simd")
     endif()    
